<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="ac_setup_brand">Brand</string>
    <string name="ac_setup_updating_commandset_titlebar">Updating</string>
    <string name="accessibility_appName">Tado</string>
    <string name="accessibility_mode_away">Away</string>
    <string name="accessibility_mode_home">Home</string>
    <string name="accessibility_timer_runningLabel">Time remaining</string>
    <string name="accessibility_weather_outsideTemperature">Outside temperature</string>
    <string name="accessibility_weather_outsideTemperatureUnavailable">Unavailable</string>
    <string name="accessibility_zone_humidityLabel">Humidity</string>
    <string name="accessibility_zone_insideTemperatureLabel">Current inside temperature</string>
    <string name="accessibility_zone_insideTemperatureUnavailable">Unavailable</string>
    <string name="accessibility_zone_manualControlActive">Manual control active</string>
    <string name="accessibility_zone_noRemoteAccess">No remote access</string>
    <string name="accessibility_zone_openWindowDetected">Open window detected</string>
    <string name="accessibility_zone_settingsLabel">Current settings</string>
    <string name="accessibility_zone_settings_ac_fanSpeedSummary">Fan speed %1$s</string>
    <string name="accessibility_zone_settings_ac_fanSpeedValue_auto">Auto</string>
    <string name="accessibility_zone_settings_ac_fanSpeedValue_high">High</string>
    <string name="accessibility_zone_settings_ac_fanSpeedValue_low">Low</string>
    <string name="accessibility_zone_settings_ac_fanSpeedValue_medium">Medium</string>
    <string name="accessibility_zone_settings_ac_modeValue_auto">Auto</string>
    <string name="accessibility_zone_settings_ac_modeValue_cool">Cool</string>
    <string name="accessibility_zone_settings_ac_modeValue_dry">Dry</string>
    <string name="accessibility_zone_settings_ac_modeValue_fan">Fan</string>
    <string name="accessibility_zone_settings_ac_modeValue_heat">Heat</string>
    <string name="accessibility_zone_settings_ac_off">OFF</string>
    <string name="accessibility_zone_settings_ac_swingSummary">Swing %1$s</string>
    <string name="accessibility_zone_settings_ac_swingValue_off">Off</string>
    <string name="accessibility_zone_settings_ac_swingValue_on">On</string>
    <string name="accessibility_zone_settings_heating_off">OFF</string>
    <string name="accessibility_zone_settings_hotWater_off">OFF</string>
    <string name="accessibility_zone_settings_hotWater_on">ON</string>
    <string name="accessibility_zone_summary_insideTemperature">Currently %1$s</string>
    <string name="accessibility_zone_summary_noRemoteAccess">No remote access</string>
    <string name="accessibility_zone_summary_settings">Set to %1$s</string>
    <string name="account_invitation_createAccountDescription">Create an account to join the home ‘%1$s‘, %2$s.</string>
    <string name="account_invitation_description">%1$s has invited you to join the home ‘%2$s‘, %3$s.</string>
    <string name="account_invitation_invalid_description">The invitation is no longer available.\n\nIf you want to join this home again, please request another invitation from one of the tado⁠° users.</string>
    <string name="account_invitation_invalid_okButton">OK</string>
    <string name="account_invitation_invalid_title">Invitation invalid</string>
    <string name="account_invitation_reactionDifferentHome_acceptButton">Join home</string>
    <string name="account_invitation_reactionDifferentHome_description">By joining, you will lose access to your current home ‘%1$s‘.</string>
    <string name="account_invitation_reactionDifferentHome_rejectButton">Reject invitation</string>
    <string name="account_invitation_reactionNoHome_acceptButton">Join home</string>
    <string name="account_invitation_reactionNoHome_description">By joining, you will be able to control tado⁠° devices in this home from the web and mobile app.</string>
    <string name="account_invitation_reactionSameHome_continueButton">Stay signed in</string>
    <string name="account_invitation_reactionSameHome_description">You are signed in as %1$s who already has access to this home. To accept the invitation sent to you, sign out and create your own account.</string>
    <string name="account_invitation_reactionSameHome_signOutButton">Sign out</string>
    <string name="account_invitation_signInDescription">Sign in with your tado⁠° account to join the home ‘%1$s‘, %2$s.</string>
    <string name="account_invitation_title">Invitation to the tado⁠° home</string>
    <string name="action_settings">Settings</string>
    <string name="alert_cancel">Cancel</string>
    <string name="alert_continue">Continue</string>
    <string name="alert_reselect_brand">Re-select brand</string>
    <string name="alert_retry">Retry</string>
    <string name="appLandingScreens_airconditioningMoodScreen_getTadoButton">Get tado⁠°</string>
    <string name="appLandingScreens_airconditioningMoodScreen_getTadoButtonURL">https://www.tado.com/shop?utm_source=tadoApp&amp;utm_medium=000_0070&amp;utm_campaign=001_01_shop&amp;utm_content=2&amp;utm_term=en#cooling</string>
    <string name="errors_updateApp_confirmButton">Update</string>
    <string name="errors_updateApp_message">A new tado⁠° app version is waiting for you!</string>
    <string name="imageview">ImageView</string>
    <string name="installation_installationCompleted_addDeviceButton">Add another device</string>
    <string name="installation_installationCompleted_doneButton">Done</string>
    <string name="installation_installationCompleted_invitePeopleButton">Invite people</string>
    <string name="installation_installationCompleted_message">You have finished the installation. You can now add additional devices to your home or go to the app.</string>
    <string name="installation_installationCompleted_title">Congratulations!</string>
    <string name="installation_menu_identifyButton">Blink display</string>
    <string name="installation_menu_needHelpMessage">Need help with your installation? Go to Help Center</string>
    <string name="installation_menu_removeDeviceButton">Remove device from home</string>
    <string name="installation_menu_resetACButton">Reset AC configuration</string>
    <string name="installation_menu_supendInstallationButton">Suspend installation</string>
    <string name="installation_menu_title">Unfinished installation</string>
    <string name="installation_sacc_incompatible_learnMoreButton">Learn more</string>
    <string name="installation_sacc_incompatible_message">tado⁠° unfortunately only works with air conditioners with a remote control that displays the current settings. \n\nReset your AC configuration or end the installation by removing the device from the home.</string>
    <string name="installation_sacc_incompatible_removeDeviceButton">Remove device from home</string>
    <string name="installation_sacc_incompatible_resetACButton">Reset AC configuration</string>
    <string name="installation_sacc_incompatible_supendInstallationButton">Suspend installation</string>
    <string name="installation_sacc_incompatible_title">tado⁠° is not compatible with your air conditioner</string>
    <string name="premiumUpgrade_subscriptionFlow_upgradeToPremium_accountLabel">Your account:</string>
    <string name="premiumUpgrade_subscriptionFlow_upgradeToPremium_confirmButton">Buy now</string>
    <string name="premiumUpgrade_subscriptionFlow_upgradeToPremium_paymentDescription">An email will be sent to complete the payment process</string>
    <string name="premiumUpgrade_subscriptionFlow_upgradeToPremium_paymentLabel">Payment:</string>
    <string name="premiumUpgrade_subscriptionFlow_upgradeToPremium_priceLabel">Price:</string>
    <string name="premiumUpgrade_subscriptionFlow_upgradeToPremium_subscriptionDescription">- Premium features will be available to all users in your home\n- Renews automatically at the end of the term (1 month)</string>
    <string name="premiumUpgrade_subscriptionFlow_upgradeToPremium_subscriptionLabel">Subscription details:</string>
    <string name="premiumUpgrade_subscriptionFlow_upgradeToPremium_title">Upgrade to tado⁠° Premium now</string>
    <string name="settings_info_privacyPolicyLabel">Privacy Policy</string>
    <string name="settings_info_privacyPolicyURL">https://www.tado.com/en/privacy-policies</string>
    <string name="settings_info_termsAndConditionsButton">Terms and Conditions</string>
    <string name="settings_info_termsAndConditionsURL">https://www.tado.com/en/terms-and-conditions</string>
    <string name="settings_notifications_awayModeLabel">Away Mode reminder</string>
    <string name="settings_notifications_description">Choose for which events you want to be notified.</string>
    <string name="settings_notifications_esrLabel">Energy Savings Report Update</string>
    <string name="settings_notifications_homeModeLabel">Home Mode reminder</string>
    <string name="settings_notifications_lowBatteryLabel">Low battery information</string>
    <string name="settings_notifications_openWindowLabel">Open Window reminder</string>
    <string name="smartSchedule_away_heating_balanceDescription">tado⁠° preheats your home before your arrival. As you near home, the target temperature will increase.\n\nWhen set to Balance, tado⁠° will find the best trade-off between comfort and savings for you.</string>
    <string name="smartSchedule_away_heating_preheatingLabel">Preheat Before Arrival</string>
    <string name="smartSchedule_away_heating_preheatingLevels_balanceLabel">Balance</string>
    <string name="smartSchedule_away_heating_preheatingLevels_comfortLabel">Comfort</string>
    <string name="smartSchedule_away_heating_preheatingLevels_ecoLabel">Eco</string>
    <string name="smartSchedule_away_heating_preheatingLevels_offLabel">Off</string>
</resources>