<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="vertical" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:id="@+id/textview_about" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="4dp" />
    <Button android:id="@+id/terms_and_conditions" android:tag="@string/settings_info_termsAndConditionsURL" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/settings_info_termsAndConditionsButton" android:onClick="goToUrlInTag" />
    <Button android:id="@+id/privacy_policy" android:tag="@string/settings_info_privacyPolicyURL" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/settings_info_privacyPolicyLabel" android:onClick="goToUrlInTag" />
</LinearLayout>
