<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:padding="16dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="28sp" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/congratulations_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/installation_installationCompleted_title" />
        <ImageView android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/congratulations_image" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0xa001" android:layout_marginTop="24dp" android:layout_marginBottom="24dp" android:src="@drawable/congratulations" />
        <TextView android:textSize="16sp" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/congratulations_message" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="24dp" android:text="@string/installation_installationCompleted_message" />
        <Button android:textColor="@color/white" android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/congratulations_done_button" android:background="@color/ac_home" android:padding="16dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="16dp" android:text="@string/installation_installationCompleted_doneButton" />
        <Button android:textColor="@color/ac_home" android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/congratulations_invite_people_buttons" android:padding="16dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/installation_installationCompleted_invitePeopleButton" style="@style/Base.Widget.AppCompat.Button.Borderless" />
        <Button android:textColor="@color/ac_home" android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/congratulations_add_devices_button" android:padding="16dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/installation_installationCompleted_addDeviceButton" style="@style/Base.Widget.AppCompat.Button.Borderless" />
    </LinearLayout>
</ScrollView>
