<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/activity_horizontal_margin" android:weightSum="1.0">
        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Headline" android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/text_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/installation_sacc_incompatible_title" />
        <Button android:textAppearance="@style/TextAppearance.AppCompat.Button" android:textColor="@color/ac_home" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/learn_more" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/installation_sacc_incompatible_learnMoreButton" style="@style/BorderlessButton" />
        <ImageView android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/image_stop" android:layout_width="UNKNOWN_DATA_0x6401" android:layout_height="UNKNOWN_DATA_0x6401" android:layout_margin="@dimen/activity_horizontal_margin" android:src="@drawable/ic_stop" />
        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Small" android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/incompatible_message" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/activity_vertical_margin" android:text="@string/installation_sacc_incompatible_message" />
        <View android:id="@+id/divider" android:background="@color/list_settings_divider" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x100" />
        <Button android:textAppearance="@style/TextAppearance.AppCompat.Button" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/button_identify" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/installation_menu_identifyButton" style="@style/Widget.AppCompat.Button.Borderless" />
        <View android:background="@color/list_settings_divider" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x100" />
        <Button android:textAppearance="@style/TextAppearance.AppCompat.Button" android:textColor="@color/ac_red" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/button_resetac" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/installation_sacc_incompatible_resetACButton" style="@style/Widget.AppCompat.Button.Borderless" />
        <View android:background="@color/list_settings_divider" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x100" />
        <Button android:textAppearance="@style/TextAppearance.AppCompat.Button" android:textColor="@color/ac_red" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/button_remove_device" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/installation_sacc_incompatible_removeDeviceButton" style="@style/Widget.AppCompat.Button.Borderless" />
        <View android:background="@color/list_settings_divider" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x100" />
        <Button android:id="@+id/button_suspend" android:padding="20dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/activity_vertical_margin" android:layout_marginBottom="@dimen/activity_vertical_margin" android:text="@string/installation_sacc_incompatible_supendInstallationButton" android:drawableLeft="@drawable/ic_pause_small" style="@style/cooling_installation_process_button" />
    </LinearLayout>
</ScrollView>
