<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/activity_horizontal_margin">
        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Headline" android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/text_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/installation_menu_title" />
        <ImageView android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/image_device" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/activity_horizontal_margin" android:srcCompat="@drawable/choose_cooling" />
        <TextView android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/text_device_name" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="TextView" />
        <TextView android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/text_serial_number" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/activity_vertical_margin" />
        <View android:id="@+id/divider" android:background="@color/list_settings_divider" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x100" />
        <Button android:textAppearance="@style/TextAppearance.AppCompat.Button" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/button_identify" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/installation_menu_identifyButton" style="@style/Widget.AppCompat.Button.Borderless" />
        <View android:background="@color/list_settings_divider" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x100" />
        <Button android:textAppearance="@style/TextAppearance.AppCompat.Button" android:textColor="@color/ac_red" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/button_resetac" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/installation_menu_resetACButton" style="@style/Widget.AppCompat.Button.Borderless" />
        <View android:background="@color/list_settings_divider" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x100" />
        <Button android:textAppearance="@style/TextAppearance.AppCompat.Button" android:textColor="@color/ac_red" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/button_remove_device" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/installation_menu_removeDeviceButton" style="@style/Widget.AppCompat.Button.Borderless" />
        <View android:background="@color/list_settings_divider" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x100" />
        <Button android:id="@+id/button_suspend" android:padding="20dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/activity_vertical_margin" android:text="@string/installation_menu_supendInstallationButton" android:drawableLeft="@drawable/ic_pause_small" style="@style/cooling_installation_process_button" />
        <TextView android:id="@+id/text_help" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/activity_horizontal_margin" android:text="@string/installation_menu_needHelpMessage" />
    </LinearLayout>
</ScrollView>
