<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:padding="@dimen/number25dp" android:layout_width="match_parent" android:layout_height="match_parent">
    <Button android:textSize="14sp" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/force_update_button" android:layout_width="wrap_content" android:layout_height="UNKNOWN_DATA_0x3001" android:layout_marginTop="16dp" android:text="@string/errors_updateApp_confirmButton" android:layout_centerInParent="true" />
    <TextView android:textSize="14sp" android:textStyle="bold" android:textColor="#ff445965" android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/force_update_text" android:padding="@dimen/number10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:text="@string/errors_updateApp_message" android:layout_above="@+id/force_update_button" />
    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="8dp" android:src="@drawable/ic_play_download" android:layout_above="@+id/force_update_text" android:layout_centerHorizontal="true" android:contentDescription="@string/imageview" />
</RelativeLayout>
